# napari-splinedist

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
src/napari_splinedist/: __init__.py  _logging.py  _sample_data.py  _widget.py  exceptions.py  napari.yaml  worker.py
src/napari_splinedist/_tests/: test_sample_data.py  test_widget.py
src/napari_splinedist/config/: __init__.py  appdir.py  config.py  napari_splinedist_config.json
src/napari_splinedist/model/: predict.py  splinegenerator.py
src/napari_splinedist/model/shipped_models/bbbc038_M8/: config.json  grid_8.npy  phi_8.npy  thresholds.json
src/napari_splinedist/utils/: colormap.py  download.py  download_file.py
src/napari_splinedist/widgets/: color_picker_push_button.py  image_layer_combo_box.py  model_download_combo_box.py  model_download_widget.py  model_selection_widget.py  progress_widget.py  rotating_logo_widget.py
