[metadata]
name = napari-splinedist
version = 0.1.3
description = A napari SplineDist plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DerThorsten/napari-splinedist
author = Dr. Thorsten Beier
author_email = derthorstebeier@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/DerThorsten/napari-splinedist/issues
    Documentation = https://github.com/DerThorsten/napari-splinedist#README.md
    Source Code = https://github.com/DerThorsten/napari-splinedist
    User Support = https://github.com/DerThorsten/napari-splinedist/issues

[options]
packages = find:
install_requires =
    pydantic
    numpy
    magicgui
    qtpy
    stardist >= 0.8.3
    splinedist >= 0.1.2
    napari-splineit >= 0.2.0
    requests
    tensorflow
    opencv-python-headless

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-splinedist = napari_splinedist:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
